Putting together the homepage and troubleshooting layout issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -199,7 +199,8 @@ a {
   font-size: 1.8rem;
   font-weight: 600;
   margin: 1rem 0;
-  padding: 2rem 3rem;
+  /* 4vw = 4% viewport width -> the wider the screen the more padding */
+  padding: 2rem 4vw;
   text-transform: uppercase;
   white-space: nowrap;
 }
@@ -278,6 +279,8 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  /* FIx the layout issue with button */
+  width: 0;
 }
 
 .input-group .btn {
@@ -735,8 +738,10 @@ a {
 /* Domain block */
 
 .block-domain-price {
+  color: var(--heading-color);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  /* Only 2 cols to fix layout issue */
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem); /*Avoid making items so close*/
   font-size: 2rem;
   font-weight: 600;
